--- a/hola_mundo.html
+++ b/hola_mundo.html
@@ -10,6 +10,7 @@
     <h2>Aqui escriban lo demas dejenme el h1</h2>
     <h2>23100134</h2>
     <h3>No le saben</h3>
+    <h3>Zzz</h3>
     <img src="https://media1.tenor.com/m/y1ZCRnMux2YAAAAC/goku-skateboard.gif" alt="">
     <img src="applebees.jpg" alt="" width="800px">
     <h2>23100176</h2>
@@ -23,11 +24,11 @@
     <h2>23100746</h2>
     <h2>23100161</h2>
     <h2>23100162</h2>
-    <h2>23100170</h2>
     <h2>23100182</h2>
     <h2>A todos los numeros de control de arriba les gusta kunno</h2>
     <h2>23100163</h2>
-    <h2>Y el que lo dijo es su novio</h2>
-    <img src="carta reversa.jpg" alt="" width="800px">
+
+
+    <img src="https://i1.sndcdn.com/artworks-w9K30DSd5jezSnJh-UzT0Sg-t500x500.jpg" alt="">
 </body>
-</html> 
+</html>
